--- a/Schedule.html
+++ b/Schedule.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="Resources/volleyball logo.jpg" type="image/volleyball-icon" class="logo">
 </head>
 <body>
-    <div id="'page_container">
     <header>
         <div id="logo">
             <img src="Resources/volleyball logo.jpg" alt="Volleyball Logo">
@@ -38,31 +37,19 @@
             <a href="Content Library.html">Content Library</a>
             <a href="Match Info.html">Match Information</a>
     </section>
-    <div id="logo2">
-        <img src="Resources/Junior mens VB.jpg" alt="Junior Men's Logo">
-    </div>
-    <h1>
+    <div class="schedule">
+        <h2>Match Dates and Time</h2>
+        <ul>
+          <li><strong>North Harbour Senior Super League</strong><br>Starts Wednesday 7th February at North Shore School Venues</li>
+          <li><strong>Premier Super League</strong><br>Starts Friday 9th February at Auckland School Venues</li>
+          <li><strong>College Sport Senior Champs</strong><br>Wednesday 13th March in Pulman Arena</li>
+          <li><strong>New Zealand Secondary School Champs</strong><br>Monday 18th March in Palmerston North</li>
+          <li><strong>North Harbour Junior Super League</strong><br>Starts Wednesday 18th September at North Shore School Venues</li>
+          <li><strong>College Sport Junior Champs</strong><br>Wednesday 13th November at Pulman Arena</li>
+          <li><strong>North Island Junior Volleyball Cup</strong><br>Tuesday 19th November at Pulman Arena</li>
+        </ul>
+        <button class="upload-button">Upload Videos/Images</button>
+      </div>
+      <h1>
         <div id="header5">
-            
-        </div>
-    </h1>
-    <section class="header6">
-        <h2>News</h2>
-        <div id="logo3">
-            <img src="Resources/news1.png" alt="news1"> <img src="Resources/news2.png" alt="news2"> <img src="Resources/news3.png" alt="news3"> 
-        </div>
-    </section>
-    <h1>
-        <div id="header5">
-            
-        </div>
-    </h1>
-    <section class="header6">
-        <h2>Advertisements</h2>
-        <div id="logo3">
-            <img src="Resources/advetise.jpg" alt="ad">
-        </div>
-    </section>
 </body>
-</div>
-
